# odin

./: .gitmodules  CMakeLists.txt
.github/workflows/: codeql-analysis.yml
examples/cube/: CMakeLists.txt  cube.c
examples/cube/shaders/vulkan/: simple_shader.vert
include/odin/: o_api.h  o_draw.h  o_draw_data.h  o_frame_buffer.h  o_framebuffer.h  o_image.h  o_index_buffer.h  o_initialize.h  o_input.h  o_log.h  o_physical_device.h  o_pipeline.h  o_platform_internal.h  o_render_data.h  o_render_device.h  o_render_pass.h  o_texture_2d.h  o_vertex_assembly.h  o_vertex_buffer.h  o_window.h  odin.h
include/odin/apis/noop/: o_noop.h  o_noop_api.h  o_noop_initialize.h
include/odin/apis/vulkan/: o_vulkan.h  o_vulkan_api.h  o_vulkan_data.h  o_vulkan_draw.h  o_vulkan_draw_data.h  o_vulkan_framebuffer.h  o_vulkan_image.h  o_vulkan_index_buffer.h  o_vulkan_initialize.c  o_vulkan_initialize.h  o_vulkan_physical_device.h  o_vulkan_pipeline.h  o_vulkan_platform.h  o_vulkan_render_device.h  o_vulkan_render_pass.h  o_vulkan_texture_2d.h  o_vulkan_vertex_assembly.h  o_vulkan_vertex_buffer.h  o_vulkan_window.h  vk_mem_alloc.h
source/: CMakeLists.txt  Info.txt  errors.txt  o_animation_internal.h  o_api.c  o_api.h  o_command_buffer.h  o_data.h  o_draw.h  o_draw_data.h  o_handle.h  o_image_2d.h  o_index_buffer.h  o_input.h  o_mesh.h  o_model.c  o_model.h  o_model_gltf.c  o_model_gltf.h  o_physical_device.h  o_pipeline.h  o_platform.h  o_platform_data.h  o_render_graph.h  o_render_pass.h  o_uniform_buffer.h  o_vertex_assembly.h  o_vertex_buffer.h  odin.h  odin_config.h  odin_internal.h
source/apis/vulkan/: o_vulkan_api.c  o_vulkan_draw.c  o_vulkan_framebuffer.c  o_vulkan_image.c  o_vulkan_index_buffer.c  o_vulkan_initialize.c  o_vulkan_physical_device.c  o_vulkan_pipeline.c  o_vulkan_render_pass.c  o_vulkan_texture_2d.c  o_vulkan_vertex_assembly.c  o_vulkan_vertex_buffer.c  o_vulkan_vma.cpp  o_vulkan_window.c  o_vulkan_window_windows.c
source/examples/: CMakeLists.txt
source/input/: o_input_windows.c  o_input_windows_internal.h
source/platform/: o_platform_internal.h  o_platform_windows.c
source/vulkan/: o_vulkan.c  o_vulkan.h  o_vulkan_buffer.c  o_vulkan_buffer.h  o_vulkan_buffer_index.c  o_vulkan_buffer_index.h  o_vulkan_buffer_uniform.c  o_vulkan_buffer_uniform.h  o_vulkan_buffer_vertex.c  o_vulkan_buffer_vertex.h  o_vulkan_command_buffer.c  o_vulkan_command_buffer.h  o_vulkan_data.h  o_vulkan_draw.c  o_vulkan_draw.h  o_vulkan_draw_data.h  o_vulkan_framebuffer.c  o_vulkan_framebuffer.h  o_vulkan_image.c  o_vulkan_image.h  o_vulkan_image_2d.c  o_vulkan_image_2d.h  o_vulkan_index_buffer.h  o_vulkan_input.c  o_vulkan_input.h  o_vulkan_physical_device.c  o_vulkan_physical_device.h  o_vulkan_pipeline.c  o_vulkan_pipeline.h  o_vulkan_platform.h  o_vulkan_platform_data.h  o_vulkan_uniform_buffer.c  o_vulkan_vertex_assembly.c  o_vulkan_vertex_assembly.h  o_vulkan_vertex_buffer.h  vma.cpp  vma.h
